--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,11 @@ fw.dirs
 **/.project
 **/.settings
 **/.classpath
+
+# fabric
+app/fabric.properties
+app/src/main/assets/crashlytics-build.properties
+app/src/main/res/values/com_crashlytics_export_strings.xml
+fastlane/*
+Gemfile
+Gemfile.lock
