--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: "com.android.application"
 apply plugin: "findbugs"
 apply plugin: "pmd"
+apply plugin: 'io.fabric'
 
 def ABORT_ON_CHECK_FAILURE = false
 
@@ -29,12 +30,24 @@ android {
         versionCode 142
         vectorDrawables.useSupportLibrary = true
     }
+
+    signingConfigs {
+        release {
+            storeFile file("/home/aboynejames/code/android/keystore/hs-keys.jks")
+            storePassword ""
+            keyAlias "key0"
+            keyPassword ""
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
         }
     }
+
 
     lintOptions {
         abortOnError ABORT_ON_CHECK_FAILURE
@@ -63,6 +76,9 @@ dependencies {
     testImplementation "junit:junit:4.12"
     testImplementation "org.mockito:mockito-core:1.10.19"
     testImplementation "org.robolectric:robolectric:3.6.1"
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.8@aar') {
+        transitive = true;
+    }
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:27.1.1"
@@ -90,6 +106,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.8@aar'
 }
 
 preBuild.dependsOn(":GBDaoGenerator:genSources")
