--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,11 @@ buildscript {
     repositories {
         jcenter()
         google()
+        maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
-
+        classpath 'com.android.tools.build:gradle:3.3.0'
+        classpath 'io.fabric.tools:gradle:1.+'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -20,5 +21,7 @@ allprojects {
             url "https://jitpack.io"
         }
         google()
+        maven { url 'https://maven.fabric.io/public' }
     }
 }
+
